--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
 body {
-  background: #EAEFEF;
-  color: #25343F;
+    background: #eaefef;
+    color: #25343f;
 }
 
 .input {
-  @apply w-full border rounded-xl px-4 py-2 focus:ring-2 outline-none;
+    @apply w-full border rounded-xl px-4 py-2 focus:ring-2 outline-none;
 }
