--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,6 +6,9 @@ body {
     color: #25343f;
 }
 
-.input {
+/* .input {
     @apply w-full border rounded-xl px-4 py-2 focus:ring-2 outline-none;
+} */
+ .input {
+  @apply w-full rounded-xl border border-slate-200 p-3 text-sm focus:border-emerald-500 focus:ring-2 focus:ring-emerald-100;
 }
